# opengl-training

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: TPcamera.hpp  camera.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  model2.hpp  shader.hpp  texture.hpp
include/glad/: glad.h
models/: cube.csv  floor.csv
src/: nwindow.cpp
src/glad/: glad.c
src/shaders/: back.cpp  frag1.frag  frag2.frag  frag3.frag  shader1.vert  shader2.vert  shader3.vert
